--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -124,13 +124,18 @@ b { font-weight: 500; }
 .sessions .link { text-align: right; padding-top: 10px; }
 .sessions .link .btn { color: white; }
 .sessions .session-tile { padding: 0px; padding-bottom: 0px; border: 1px solid #d8d8d8; margin-bottom: 20px; }
-.sessions .session-tile .vidthumb { padding: 4px; }
-.sessions .session-tile .vidthumb .thumb { position: relative; margin-top: -40px; top: 0px; }
-.sessions .session-tile .vidthumb .icon { position: relative; z-index: 1; top: 0px; left: 10px; }
+.sessions .session-tile .session-blue { background-color: #0098cd; -webkit-transition: opacity 0.3s ease; transition: opacity 0.3s ease; }
+.sessions .session-tile .session-blue .vidthumb { padding: 4px; }
+.sessions .session-tile .session-blue .vidthumb .thumb { position: relative; margin-top: -40px; top: 0px; }
+.sessions .session-tile .session-blue .vidthumb .icon { position: relative; z-index: 1; top: 0px; left: 10px; }
+.sessions .session-tile .session-blue .title { display: block; position: relative; font-family: Georgia, serif; color: white; padding: 10px 40px 10px 10px; font-size: 16px; }
+.sessions .session-tile .session-blue .title i { position: absolute; right: 8px; }
+.sessions .session-tile .session-blue:hover { opacity: 0.7; }
 .sessions .session-tile .text-wrap { padding: 4px; margin: 5px; }
-.sessions .session-tile .text-wrap .title { font-family: Georgia, serif; color: #414141; font-size: 14px; }
 .sessions .session-tile .text-wrap p { padding: 0; margin: 0; }
-.sessions .session-tile .text-wrap a { color: #42a1fc; }
+.sessions .session-tile .text-wrap a { color: black; border-bottom: 1px dashed black; }
+.sessions .session-tile .text-wrap a.button { display: inline-block; border: none; color: white; padding: 8px 6px; margin: 10px 0px; }
+.sessions .session-tile .text-wrap a.button i { padding: 0px 5px; }
 .sessions .session-tile .text-wrap .subtext { padding-bottom: 8px; }
 .sessions .session-tile .nov { width: 90% !important; }
 .sessions .session-tile .tags { font-size: 13px; background: #f3f3f3; padding: 7px; }
