--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -589,23 +589,47 @@ b{
 		padding-bottom: 0px;
 		border: 1px solid $grayMedium;
 		margin-bottom: 20px;
-	
-		.vidthumb{
-			padding: 4px;
+		.session-blue{
+			background-color: $blue;
+			-webkit-transition: opacity 0.3s ease;
+			transition: opacity 0.3s ease;
 
-			.thumb{
-				position: relative;
-				margin-top: -40px;
-				top: 0px;
-			
+			.vidthumb{
+				padding: 4px;
+
+				.thumb{
+					position: relative;
+					margin-top: -40px;
+					top: 0px;
+				
+				}
+				
+
+				.icon{
+					position: relative;
+					z-index: 1;
+					top: 0px;
+					left: 10px;
+				}
 			}
-			
-
-			.icon{
+			.title{
+				display: block;
 				position: relative;
-				z-index: 1;
-				top: 0px;
-				left: 10px;
+				font-family: Georgia, serif;
+				color: white;
+				padding: 10px 40px 10px 10px;
+				font-size: 16px;
+				
+					i{
+						position: absolute;
+						right: 8px;
+						
+					}
+
+
+			}
+			&:hover{
+				opacity: 0.7;
 			}
 		}
 
@@ -613,21 +637,25 @@ b{
 			padding: 4px;
 			margin: 5px;
 
-			.title{
-				font-family: Georgia, serif;
-				color: $grayDarkest;
-				font-size: 14px;
-			}
-						
-			
-
 			p{
 				padding: 0;
 				margin: 0;
 			}
 
 			a{
-				color:$blueLight;	
+				color: black;
+				border-bottom: 1px dashed black;
+
+				&.button{
+					display: inline-block;
+					border: none;
+					color: white;
+					padding: 8px 6px;
+					margin: 10px 0px;
+					i{
+						padding: 0px 5px;
+					}
+				}
 			}
 			.subtext{
 				padding-bottom: 8px;
