--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -660,6 +660,9 @@ b{
 						padding: 0px 5px;
 					}
 				}
+				&:hover{
+					text-decoration: none;
+				}
 			}
 			.subtext{
 				padding-bottom: 8px;
