--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -108,11 +108,14 @@ b { font-weight: 500; }
 #SessionsHolder #filter-wrap .filter form ul { list-style-type: none; margin-left: 0px; }
 #SessionsHolder #filter-wrap .filter form ul input { margin-top: 0px; }
 #SessionsHolder #filter-wrap .filter form ul label { font-size: 12px !important; font-weight: normal; display: inline-block; }
-#SessionsHolder #filter-wrap .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
+#SessionsHolder #filter-wrap .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; margin-bottom: 10px; }
+#SessionsHolder #filter-wrap .filter form .Actions input.resetformaction { text-transform: lowercase; height: 43px; padding: 5px; }
 #SessionsHolder #filter-wrap .filter .underline { text-decoration: underline; }
 #SessionsHolder #filter-wrap .tags { padding-right: 20px; padding-bottom: 30px; }
 #SessionsHolder #filter-wrap .tags a { color: #0077a8; }
 #SessionsHolder #filter-wrap #tag-list { display: none; }
+#SessionsHolder #filter-wrap .current-search { margin-top: 20px; background: #f3f3f3; border: 1px #d8d8d8 solid; padding: 10px 10%; /*padding-left: 10%;
+padding-right: 10%;*/ margin-bottom: 20px; color: black; }
 #SessionsHolder .pagination { display: none; text-align: center; }
 #SessionsHolder .pagination .pages { border-radius: 0px; text-align: center; }
 #SessionsHolder .pagination .pages a { border-radius: 0px; width: 20px; border-left-width: 1px; border-right-width: 0px; }
